Fixing the z-index

--- a/css/css.css
+++ b/css/css.css
@@ -22,7 +22,7 @@ background-color: white;
 position: fixed;
 left: -200px;
 top: 0;
-z-index: 1000;
+z-index: 1000000;
 transition: .3s;
 border: 1px solid #EEE;
 }
